# attentionx-icl

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  distribution_check.ipynb  pyproject.toml  requirements.txt  test_origin.py  test_scores.py  test_sequence.py  test_sst2.py
config/data/: template_datagen-config.json
config/distill/: mnist-text-small14-bert-gemma2B-topk-mpnet.json  mnist-text-small14-bert-gptneo2p7B-topk-mpnet.json  mnliBERT-topk-gemma2b.json  mnliBERT-topk-gptneo.json  qnliBERT-topk-gemma2b.json  qnliBERT-topk-gptneo.json  sst2-random-distilgpt2.json  sst2-topk-distilgpt2.json  template_distill-config.json  template_seq-ablation.json  yelptinyBERT-random-distilgpt2.json  yelptinyBERT-random-gptneo.json  (+3 more)
data/: train_sst5_bert.jsonl  trec-test.jsonl  trec-train.jsonl
data/sst2/: dev.jsonl  (+4 more)
data_utils/: create_traindata_sst2.py  create_traindata_sst5.py  data_aug_sst2.py  data_aug_sst5.py  distribution_check.ipynb  generate_raw_dataset.ipynb  generated_train_dist.ipynb  parquet_to_jsonl.ipynb  results_check.ipynb  results_check_topkbert.ipynb  subj_dist.ipynb
iclx/: __init__.py
scripts/: ag_news.py  create_bert_train.ipynb  create_subj_train.py  create_train.py  create_train_with_pseudo.py  create_traindata_ft.py  create_traindata_sst2.py  create_traindata_sst5.py  create_traindata_subj.py  distill.py  distill_mixup.py  infer_bert.py  infer_bert_ag_news.py  infer_bert_mnli.py  infer_bert_qnli.py  infer_bert_sst2.py  infer_bert_sst5.py  infer_bert_trec.py  infer_bert_yelp.py  mnist-text-gen.py  sst2.py  sst2_diff.py  sst2_gpt_j_6B.py  sst2_gpt_neo_2.7B.py  sst2_old.py  sst2_prob.py  sst2_topk.py  sst5.py  sst5_hypotest.py  sst5_label_diff.py  sst5_old.py  subj.py  temperature_scale.py  test.py  train_bert.py  train_bert_ag_news.py  train_bert_mnli.py  train_bert_qnli.py  train_bert_sst2.py  train_bert_sst5.py  (+3 more)
vessl_exp/: sst2.yaml  sst2_gpt_j_6B.yaml  sst2_gpt_neo_2.7B.yaml  sst2_topk.yaml  sst5.yaml  trec.yaml
(+82 files in other folders)
