[tool.poetry]
name = "iclx"
version = "0.2.1"
description = ""
authors = ["nemodleo <nemod.leo@snu.ac.kr>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
evaluate = "^0.4.1"
torch = "==2.2.0"
transformers = "^4.37.2"
accelerate = "^0.26.1"
loguru = "^0.7.2"
datasets = "^2.16.1"
polars = {extras = ["pyarrow"], version = "^0.20.7"}
flake8 = "^7.0.0"
mypy = "^1.8.0"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
scikit-learn = "^1.4.0"
nvitop = "^1.3.2"
jupyterlab = "^4.1.1"
faiss-gpu = [
    { markers = "sys_platform == 'linux'", url = "https://files.pythonhosted.org/packages/a8/71/623896382d90a9a99adf3438aa2c575535ba37804be9701d66f3337afd83/faiss_gpu-1.7.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
]
faiss-cpu = [
    { markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", url = "https://files.pythonhosted.org/packages/ad/bb/a5edf5f8f8cad32fbc9e2d4746bba510f3ed02c081abc6eed74627229c24/faiss_cpu-1.8.0-cp310-cp310-macosx_11_0_arm64.whl"}
]
sentence-transformers = "^2.5.1"
fire = "^0.6.0"
pytorch-lightning = "^2.2.2"
matplotlib = "^3.8.4"
swig = "^4.2.1"
cmake = "^3.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
